--- a/vector-instances.cabal
+++ b/vector-instances.cabal
@@ -1,7 +1,8 @@
 name:                vector-instances
-version:             2.0.4.1
+version:             2.0.4.2
 synopsis:            Orphan Instances for 'Data.Vector'
 homepage:            http://github.com/ekmett/vector-instances
+bug-reports:         http://github.com/ekmett/vector-instances/issues
 license:             BSD3
 license-file:        LICENSE
 author:              Edward Kmett
@@ -9,6 +10,7 @@ maintainer:          ekmett@gmail.com
 category:            Data, Data Structures
 build-type:          Simple
 cabal-version:       >=1.6
+extra-source-files: .travis.yml
 
 source-repository head
   type: git
@@ -22,10 +24,10 @@ library
     Data.Vector.Instances
 
   build-depends:
-    base          >= 4 && < 5,
-    vector        >= 0.9 && < 0.10,
-    semigroupoids >= 1.2.6.1 && < 1.3,
-    semigroups    >= 0.8 && < 0.9,
-    comonad       >= 1.1.1.1 && < 1.2,
+    base          >= 4     && < 5,
+    vector        >= 0.9   && < 0.10,
+    semigroupoids >= 1.3   && < 1.4,
+    semigroups    >= 0.8.2 && < 0.9,
+    comonad       >= 1.1.1.3 && < 1.2,
     pointed       >= 2.0.3 && < 2.1,
     keys          >= 2.1.2 && < 2.2
