--- a/vector-instances.cabal
+++ b/vector-instances.cabal
@@ -1,5 +1,5 @@
 name:                vector-instances
-version:             3.2
+version:             3.2.1
 synopsis:            Orphan Instances for 'Data.Vector'
 homepage:            http://github.com/ekmett/vector-instances
 bug-reports:         http://github.com/ekmett/vector-instances/issues
@@ -10,24 +10,27 @@ maintainer:          ekmett@gmail.com
 category:            Data, Data Structures
 build-type:          Simple
 cabal-version:       >=1.6
-extra-source-files: .travis.yml
+extra-source-files:
+  .travis.yml
+  .ghci
+  .vim.custom
+  .gitignore
+  CHANGELOG.markdown
+  README.markdown
 
 source-repository head
   type: git
   location: git://github.com/ekmett/vector-instances.git
 
 library
-  other-extensions:
-    TypeFamilies
-
-  exposed-modules:
-    Data.Vector.Instances
-
+  other-extensions: TypeFamilies
+  exposed-modules: Data.Vector.Instances
+  hs-source-dirs: src
   build-depends:
     base          >= 4       && < 5,
     vector        >= 0.9     && < 0.11,
-    semigroupoids >= 3.0     && < 3.1,
-    semigroups    >= 0.8.3.1 && < 0.9,
-    comonad       >= 3.0     && < 3.1,
-    pointed       >= 3.0     && < 3.1,
-    keys          >= 3.0     && < 3.1
+    semigroupoids >= 3,
+    semigroups    >= 0.8.3.1,
+    comonad       >= 3,
+    pointed       >= 3,
+    keys          >= 3
