--- a/vector-instances.cabal
+++ b/vector-instances.cabal
@@ -10,6 +10,14 @@ maintainer:          ekmett@gmail.com
 category:            Data, Data Structures
 build-type:          Simple
 cabal-version:       >=1.6
+tested-with:
+  GHC==7.0.4,
+  GHC==7.2.2,
+  GHC==7.4.2,
+  GHC==7.6.3,
+  GHC==7.8.4,
+  GHC==7.10.2,
+  GHC==7.10.3
 extra-source-files:
   .travis.yml
   .ghci
