--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ matrix:
       addons: {apt: {packages: [cabal-install-head,ghc-head], sources: [hvr-ghc]}}
 
   allow_failures:
+    - env: CABALVER=1.18 GHCVER=7.0.4
+    - env: CABALVER=1.18 GHCVER=7.2.2
     - env: CABALVER=head GHCVER=head
 
 before_install:
