Upgrade multi-ghc-travis setup

--- a/vector-instances.cabal
+++ b/vector-instances.cabal
@@ -1,6 +1,7 @@
 name:                vector-instances
 version:             3.4
 synopsis:            Orphan Instances for 'Data.Vector'
+description:         Orphan Instances for 'Data.Vector'.
 homepage:            http://github.com/ekmett/vector-instances
 bug-reports:         http://github.com/ekmett/vector-instances/issues
 license:             BSD3
@@ -18,7 +19,8 @@ tested-with:
   GHC==7.8.4,
   GHC==7.10.3,
   GHC==8.0.2,
-  GHC==8.2.2
+  GHC==8.2.2,
+  GHC==8.4.1
 extra-source-files:
   .travis.yml
   .ghci
