--- a/vector-instances.cabal
+++ b/vector-instances.cabal
@@ -20,7 +20,8 @@ tested-with:
   GHC==7.10.3,
   GHC==8.0.2,
   GHC==8.2.2,
-  GHC==8.4.3
+  GHC==8.4.3,
+  GHC==8.6.1
 extra-source-files:
   .travis.yml
   .ghci
