--- a/vector-instances.cabal
+++ b/vector-instances.cabal
@@ -21,7 +21,8 @@ tested-with:
   GHC==8.0.2,
   GHC==8.2.2,
   GHC==8.4.4,
-  GHC==8.6.4
+  GHC==8.6.4,
+  GHC==8.8.1
 extra-source-files:
   .travis.yml
   .ghci
