--- a/vector-instances.cabal
+++ b/vector-instances.cabal
@@ -10,7 +10,7 @@ author:              Edward Kmett
 maintainer:          ekmett@gmail.com
 category:            Data, Data Structures
 build-type:          Simple
-cabal-version:       >=1.6
+cabal-version:       >=1.10
 tested-with:
   GHC==7.0.4,
   GHC==7.2.2,
@@ -43,6 +43,7 @@ flag hashable
   manual: True
 
 library
+  default-language: Haskell2010
   other-extensions: TypeFamilies
   exposed-modules: Data.Vector.Instances
   hs-source-dirs: src
