--- a/vector-instances.cabal
+++ b/vector-instances.cabal
@@ -33,7 +33,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: git://github.com/ekmett/vector-instances.git
+  location: https://github.com/ekmett/vector-instances.git
 
 flag hashable
   description:
